updates to s3 code
